added links page added links/get and liktypes/get api added support for retry button in scanzyload added support for click row in scanzytable refactored scripts to use new features added filter function in SQLhelper for where clauses modified entities.xml structure for singular names

--- a/res/bootstrap-ex.css
+++ b/res/bootstrap-ex.css
@@ -11,3 +11,5 @@ textarea.vresize { resize: vertical; }
 
 h1 .badge, h2 .badge, h3 .badge, h4 .badge, h5 .badge { vertical-align: middle }
 span.badge-light { color: #aaa; background-color: #eee; }
+
+.btn-multiline .btn { margin-top: .4em; }
