--- a/res/bootstrap-ex.css
+++ b/res/bootstrap-ex.css
@@ -13,3 +13,5 @@ h1 .badge, h2 .badge, h3 .badge, h4 .badge, h5 .badge { vertical-align: middle }
 span.badge-light { color: #aaa; background-color: #eee; }
 
 .btn-multiline .btn { margin-top: .4em; }
+
+.form-horizontal .has-feedback .input-group .form-control-feedback { right: 38px; }
