scanzytable added suport for big new button,auto sort at load, hide searchbar added random entities examples for linked types added support for entity custom search hint, custom search min rows added support for beforefetch process callback added function to load alias from ajax added showinlinst support to hide columns in entities view added noselect classes

--- a/res/style.css
+++ b/res/style.css
@@ -5,6 +5,7 @@ body { font-family: Verdana; }
 
 .box { margin-bottom: 1.5em; border-bottom:solid 1px #ccc; padding: 1.5em 0; }
 .box > h1, .box > h2, .box > h3, .box > h4 { margin:0; }
+.box > .row:not(.form-horizontal) { margin: -15px; }
 
 .line { margin:1em 0; border-top:solid 1px #ddd; }
 
@@ -47,8 +48,8 @@ button.left, span.left { float: left; }
 .nav li a.active { background-color:#eaeaea; }
 .nav li a:hover { background-color:#6bf; color:#fff; }
 
-.table tr.hover { background-color: #eee; }
-.table tr { transition: background-color .5s; }
+.table tr { transition: background-color .5s linear; }
+.table tr.hover { background-color: #eaeaea; transition: none;}
 .table tr.clickable { cursor: pointer; }
 
 .link-box { 
