First Beta release
added APIS:
entities/linkabel
links/one - links/del - links/edit

added filterNotIn support in SQL helper
added linkableentitiespopup
added translate.js support for jquery
changed icon for edit button
added newlink and editlink page
added scanzyform.js, formbuilder.js
added modal.js, merged confirm.js
fixed bug in scanzytable for show search and show btn
added passive mode to scanzyload
reorganized code in topbar.js with aliases loading
fixed bug in getaliases api
added support for separate descriptions/aliases for links

--- a/res/style.css
+++ b/res/style.css
@@ -53,6 +53,7 @@ button.left, span.left { float: left; }
 
 .table tr { transition: background-color .5s linear; }
 .table tr.hover { background-color: #eaeaea; transition: none; }
+.table tr.active { background-color: #29f; color:white; transition:none; }
 .table tr.clickable { cursor: pointer; }
 
 .link-box { 
