minor improvements (front end effects/bugfixes) added fade animations for titles, topbar, scanzytable, scanzyload removed not ready pages (help, edit entity type) fixed margin under boostrap rows added confirm options (buttons/title) improved loading in links page changed title in links page added footer always at bottom of page

--- a/res/bootstrap-ex.css
+++ b/res/bootstrap-ex.css
@@ -1,5 +1,7 @@
 /* bootstrap enhancements */
 
+.row [class*="col-"] { margin-bottom:.8em; }
+
 ul.dropdown-menu > li { width:100%; }
 .navbar-collapse.in { overflow-y: visible; }
 
@@ -8,7 +10,7 @@ ul.dropdown-menu > li { width:100%; }
 .progress a { color: #fff; cursor: pointer; }
 
 textarea.vresize { resize: vertical; }
-
+ 
 h1 .badge, h2 .badge, h3 .badge, h4 .badge, h5 .badge { vertical-align: middle }
 span.badge-light { color: #aaa; background-color: #eee; }
 
